--- a/public/style.css
+++ b/public/style.css
@@ -552,6 +552,7 @@ a:hover {
     padding: 4rem 2rem;
     color: var(--text-secondary);
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     min-height: 100%;
